# SQL-Bot

./: Chatbot.py  README.md  pyproject.toml  requirements.txt
chroma_db/: chroma_vector.py
module/: ui_module.py  utils.py
openai_llm/: __init__.py  openai_embedding.py
pages/: Connect DB.py  Setup Bot.py  Train LLM.py
